[package]
name = "rusty-umbrella"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
reqwest = "0.11.10"
tokio = "1.17.0"
serde_json = "1.0.79"
serde = "1.0.79"
serde_derive = "1.0.79"
rand = "0.8.5"